--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.1"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.9"
 drf-spectacular = "^0.27.2"
+isort = "^5.13.2"
 
 
 [build-system]
